--- a/.github/workflows/prod_mirnet-tfjs.yml
+++ b/.github/workflows/prod_mirnet-tfjs.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy Node.js app to Azure Web App - mirnet-tfjs
+name: Deploy Node.js app
 
 on:
   push:
@@ -10,6 +10,8 @@ on:
 
 jobs:
   build-and-deploy:
+    if: "!contains(github.event.head_commit.message, 'skip ci')"
+    
     runs-on: ubuntu-latest
 
     steps:
