--- a/.github/workflows/prod_mirnet-tfjs.yml
+++ b/.github/workflows/prod_mirnet-tfjs.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   build-and-deploy:
-    if: "!contains(github.event.head_commit.message, 'skip ci')"
+    if: "!contains(github.event.head_commit.message, 'skip-ci')"
     
     runs-on: ubuntu-latest
 
