--- a/.github/workflows/prod_mirnet-tfjs.yml
+++ b/.github/workflows/prod_mirnet-tfjs.yml
@@ -16,6 +16,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@master
+      with:
+        lfs: true 
 
     - name: Set up Node.js version
       uses: actions/setup-node@v1
