--- a/.github/workflows/prod_mirnet-tfjs.yml
+++ b/.github/workflows/prod_mirnet-tfjs.yml
@@ -29,6 +29,7 @@ jobs:
         npm install
         npm run build --if-present
         npm run test --if-present
+      working-directory: ./example
 
     - name: 'Deploy to Azure Web App'
       uses: azure/webapps-deploy@v2
