--- a/.github/workflows/main_mirnet-tfjs-demo.yml
+++ b/.github/workflows/main_mirnet-tfjs-demo.yml
@@ -1,19 +1,22 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy Node.js app to Azure Web App - mirnet-tfjs-demo
+name: Deploy Node.js app
 
 on:
   push:
     branches:
       - main
-
 jobs:
   build-and-deploy:
+    if: "!contains(github.event.head_commit.message, 'skip-ci')"
+    
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@master
+      with:
+        lfs: true 
 
     - name: Set up Node.js version
       uses: actions/setup-node@v1
@@ -25,11 +28,12 @@ jobs:
         npm install
         npm run build --if-present
         npm run test --if-present
+      working-directory: ./example
 
     - name: 'Deploy to Azure Web App'
       uses: azure/webapps-deploy@v2
       with:
-        app-name: 'mirnet-tfjs-demo'
+        app-name: 'mirnet-tfjs'
         slot-name: 'production'
         publish-profile: ${{ secrets.AzureAppService_PublishProfile_8f220d0b027140998222b35bd5832e81 }}
-        package: .
+        package: .  
